# jinja2-josa-filter

./: .gitignore  README.md  pyproject.toml  vendorize.toml
.github/workflows/: ansible-test.yml  flake8.yml  pylint.yml  pytest.yml  release-collection.yml  release-pypi.yml  release.yml
src/ansible_collections/hsl0/josa/: README.md  galaxy.yml
src/ansible_collections/hsl0/josa/plugins/filter/: josa.py  josa.yml  가.yml  과.yml  과와.yml  는.yml  다.yml  랑.yml  로.yml  를.yml  며.yml  아.yml  아야.yml  야.yml  와.yml  으로.yml  은.yml  은는.yml  을.yml  을를.yml  이.yml  이가.yml  이다.yml  이랑.yml  이며.yml
src/ansible_collections/hsl0/josa/tests/integration/targets/filter_josa/tasks/: main.yml
src/ansible_collections/hsl0/josa/tests/sanity/: ignore-2.17.txt
src/jinja2_josa_filter/: README.md  __init__.py
tests/: test_placeholder.py
