[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jinja2-josa-filter"
dynamic = ["version"]
description = "Korean josa filters for Jinja2-compatible template environments."
readme = "src/jinja2_josa_filter/README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "hsl0" },
]
keywords = ["jinja2", "korean", "josa", "ansible", "filter"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "tjosa"
]

[project.optional-dependencies]
dev = [
  "ansible-core",
  "build",
  "flake8",
  "molecule",
  "pylint",
  "pytest",
  "vendorize",
]

[project.urls]
Homepage = "https://github.com/hsl0/jinja2-josa-filter"
Issues = "https://github.com/hsl0/jinja2-josa-filter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jinja2_josa_filter"]
exclude = ["src/jinja2_josa_filter/README.md"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
# Only consider tags like "pypi/v1.2.3"; the collection is released
# independently under "ansible-collection/v*" tags.
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "pypi/v*"]
tag_regex = "^pypi/v(?P<version>.*)$"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/jinja2_josa_filter"]
python_files = ["*.py"]
addopts = "--doctest-modules"
