[build-system]
requires = ["hatchling >=1.31.0, <2.0.0", "hatch-vcs >=0.5.0, <0.6.0"]
build-backend = "hatchling.build"

[project]
name = "jinja2-josa-filter"
dynamic = ["version"]
description = "Korean josa filters for Jinja2-compatible template environments."
readme = "src/jinja2_josa_filter/README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "hsl0" },
]
keywords = ["jinja2", "korean", "josa", "ansible", "filter"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "tjosa >=0.3.0, <0.4.0",
]

[project.optional-dependencies]
dev = [
  "ansible-core >=2.21.1, <3.0.0",
  "build >=1.5.1, <2.0.0",
  "flake8 >=7.3.0, <8.0.0",
  "flake8-pyproject >=1.2.4, <2.0.0",
  "molecule >=26.6.0, <27.0.0",
  "pylint >=4.0.6, <5.0.0",
  "pytest >=9.1.1, <10.0.0",
  "vendorize >=0.3.0, <0.4.0",
]

[project.urls]
Homepage = "https://github.com/hsl0/jinja2-josa-filter"
Issues = "https://github.com/hsl0/jinja2-josa-filter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jinja2_josa_filter"]
exclude = ["src/jinja2_josa_filter/README.md"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0+wip"

[tool.hatch.version.raw-options]
# Only consider tags like "pypi/v1.2.3"; the collection is released
# independently under "ansible-collection/v*" tags.
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "pypi/v*"]
tag_regex = "^pypi/v(?P<version>.*)$"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/jinja2_josa_filter"]
python_files = ["*.py"]
addopts = "--doctest-modules"

[tool.flake8]
max-line-length = 88